fixed footer spacing entirely and made cow not take as long to show up on small screens

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -185,7 +185,7 @@
   z-index: -1 !important;
   /* min-height: 100vh !important; */
   /* min-height: 40vh !important; */
-  padding-bottom: min(300px, 25vh) !important;
+  padding-bottom: min(200px, 60vh) !important;
   /* flex: 1 1 auto; */
   /* padding-bottom: 12px !important; */
 
